@@ -168,3 +168,5 @@ export const COMPUTING_REGENERATION_CARD = 1;
 export const COMPUTING_MAX_CARD = 1;
 export const MORE_HAB_FROM_STATIONS = 10;
 export const EXTRA_DISTRICTS_FROM_STATIONS = 0.1;
+export const KILL_STREAK_SPEED_CARD = 0.02;
+export const KILL_STREAK_GAIN_CARD = 0.02;
